Fix file path to staff page
fix the file path to staff page so it does not show page not found.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1>Metro Ink Links</h1>
-        <a href="/categories/staff.html">Staff</a>
+        <a href="categories/staff.html">Staff</a>
     </body>
 </html>
