Add links to other pages
Add links to other pages like contact, event info, merch, FAQ

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
         </title>
     </head>
     <body>
-        <h1>Metro Ink Links</h1>
-        <a href="categories/staff.html">Staff</a>
+        <h1>Metro Ink. - Live Gaming Events in NYC</h1>
+        <h2>Metro Ink Links</h2>
+            <ul>
+                <li><a href="categories/staff.html">Staff</a></li>
+                <li><a href="categories/events.html">Events</a></li>
+                <li><a href="categories/FAQ.html">FAQ</a></li>
+                <li><a href="categories/merch.html">Merchandise</a></li>
+                <li><a href="categories/contact.html">Contact</a></li>
+            </ul>
     </body>
 </html>
