Add logo for organization.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>
-            Metro Ink - Live Gaming Events in NYC
+            Metro Ink.
         </title>
     </head>
     <body>
+        <img src="https://pbs.twimg.com/profile_images/1588748510232453120/gW0xK5Fh_400x400.jpg" width="200x200" height="200x200">
         <h1>Metro Ink. - Live Gaming Events in NYC</h1>
         <h2>Metro Ink Links</h2>
             <ul>
