Provide style functionality to homepage
Test the waters with CSS and what we want our page to look like.
Add a section for the top page, color to the background and heading texts.
Then some color for the list bullet poitns but we will probably schange this

--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
         <title>
             Metro Ink.
         </title>
+        <link rel="stylesheet" href="style.css"/>
     </head>
-    <body>
-        <h1>Metro Ink. - Live Gaming Events in NYC</h1>
-        <img src="https://pbs.twimg.com/profile_images/1588748510232453120/gW0xK5Fh_400x400.jpg" width="200x200" height="200x200">
-        <h2>Metro Ink Links</h2>
+    <body id="bg">
+        <p class="top">
+            <img id="logo" src="https://pbs.twimg.com/profile_images/1588748510232453120/gW0xK5Fh_400x400.jpg" >
+            <div class="titles" id="main">Metro Ink. - Live Gaming Events in NYC</div>
+        </p>
+        
+        <h2 class="titles">Metro Ink Links</h2>
             <ul>
-                <li><a href="categories/staff.html">Staff</a></li>
-                <li><a href="categories/events.html">Events</a></li>
-                <li><a href="categories/FAQ.html">FAQ</a></li>
-                <li><a href="categories/merch.html">Merchandise</a></li>
-                <li><a href="categories/contact.html">Contact</a></li>
+                <li class="list"><a href="categories/staff.html">Staff</a></li>
+                <li class="list"><a href="categories/events.html">Events</a></li>
+                <li class="list"><a href="categories/FAQ.html">FAQ</a></li>
+                <li class="list"><a href="categories/merch.html">Merchandise</a></li>
+                <li class="list"><a href="categories/contact.html">Contact</a></li>
             </ul>
     </body>
 </html>
