Group and style top menu bar elements.
We group the image and text elements into a header
and style those elements by putting them into a giant class,
alongside each element having their own class.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body id="bg">
-        <p class="top">
-            <img id="logo" src="https://pbs.twimg.com/profile_images/1588748510232453120/gW0xK5Fh_400x400.jpg" >
+        <h1 class="top-menu">
+            <img class ="logo" src="https://pbs.twimg.com/profile_images/1588748510232453120/gW0xK5Fh_400x400.jpg">
             <div class="titles" id="main">Metro Ink. - Live Gaming Events in NYC</div>
-        </p>
+        </h1>
         
         <h2 class="titles">Metro Ink Links</h2>
             <ul>
