--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
     <body id="bg">
         <h1 class="top-menu">
             <img class ="logo" src="https://pbs.twimg.com/profile_images/1588748510232453120/gW0xK5Fh_400x400.jpg">
-            <div class="titles" id="main">Metro Ink. - Live Gaming Events in NYC</div>
+            <span class="titles" id="main">Metro Ink.  Live Gaming Events in NYC</span>
         </h1>
         
-        <h2 class="titles">Metro Ink Links</h2>
-            <ul>
-                <li class="list"><a href="categories/staff.html">Staff</a></li>
-                <li class="list"><a href="categories/events.html">Events</a></li>
-                <li class="list"><a href="categories/FAQ.html">FAQ</a></li>
-                <li class="list"><a href="categories/merch.html">Merchandise</a></li>
-                <li class="list"><a href="categories/contact.html">Contact</a></li>
-            </ul>
+        <div class="bottom-menu">
+                <div class="list"><a href="categories/staff.html">Staff</a>
+                <div class="list"><a href="categories/events.html">Events</a>
+                <div class="list"><a href="categories/FAQ.html">FAQ</a>
+                <div class="list"><a href="categories/merch.html">Merchandise</a>
+                <div class="list"><a href="categories/contact.html">Contact</a>
+        </div>
     </body>
 </html>
