--- a/index.html
+++ b/index.html
@@ -7,18 +7,37 @@
         </title>
         <link rel="stylesheet" href="style.css"/>
     </head>
-    <body id="bg">
+    <body>
         <h1 class="top-menu">
             <img class ="logo" src="https://pbs.twimg.com/profile_images/1588748510232453120/gW0xK5Fh_400x400.jpg">
-            <span class="titles" id="main">Metro Ink.  Live Gaming Events in NYC</span>
+            <div class="titles" id="main">Metro Ink.  Live Gaming Events in NYC</div>
+            <span class="right">Menu</span>
         </h1>
         
-        <div class="bottom-menu">
-                <div class="list"><a href="categories/staff.html">Staff</a>
-                <div class="list"><a href="categories/events.html">Events</a>
-                <div class="list"><a href="categories/FAQ.html">FAQ</a>
-                <div class="list"><a href="categories/merch.html">Merchandise</a>
-                <div class="list"><a href="categories/contact.html">Contact</a>
-        </div>
+        <footer>
+                <span class="list"><a href="categories/staff.html">Staff</a></span>
+                <span class="list"><a href="categories/events.html">Events</a></span>
+                <span class="list"><a href="categories/FAQ.html">FAQ</a></span>
+                <span class="list"><a href="categories/merch.html">Merchandise</a></span>
+                <span class="list"><a href="categories/contact.html">Contact</a></span>
+        </footer>
+        <footer>
+           <span> 
+                <a href="" target="_blank"></a>
+                <img class="socialbuttons"> src="" alt="Twitter"> 
+            </span>
+            <span> 
+                <a href="" target="_blank"></a>
+                <img class="socialbuttons"> src="" alt="Discord"> 
+            </span>
+            <span> 
+                <a href="" target="_blank"></a>
+                <img class="socialbuttons"> src="" alt="Email"> 
+            </span>
+            <span> 
+                <a href="" target="_blank"></a>
+                <img class="socialbuttons"> src="" alt="Youtube"> 
+            </span>
+        </footer>
     </body>
 </html>
