--- a/index.html
+++ b/index.html
@@ -20,24 +20,29 @@
                 <span class="list"><a href="categories/FAQ.html">FAQ</a></span>
                 <span class="list"><a href="categories/merch.html">Merchandise</a></span>
                 <span class="list"><a href="categories/contact.html">Contact</a></span>
+                <footer2 class="buttons">
+                    <span> 
+                         <a href="https://twitter.com/metro_ink?lang=en" >
+                         <img class="socials" src="https://www.iconsdb.com/icons/preview/white/twitter-xxl.png"alt="Twitter"> 
+                        </a>
+                     </span>
+                     <span> 
+                         <a href="" target="_blank">
+                         <img class="socials" src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png" alt="Discord"> 
+                        </a>
+                     </span>
+                     <span> 
+                         <a href="" target="_blank">
+                         <img class="socials" src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Email"> 
+                        </a>
+                     </span>
+                     <span> 
+                         <a href="" target="_blank">
+                         <img class="socials" src="https://static-00.iconduck.com/assets.00/youtube-icon-512x359-dyeyi1hm.png" alt="Youtube"> 
+                        </a>
+                     </span>
+                 </footer2>
         </footer>
-        <footer>
-           <span> 
-                <a href="" target="_blank"></a>
-                <img class="socialbuttons"> src="" alt="Twitter"> 
-            </span>
-            <span> 
-                <a href="" target="_blank"></a>
-                <img class="socialbuttons"> src="" alt="Discord"> 
-            </span>
-            <span> 
-                <a href="" target="_blank"></a>
-                <img class="socialbuttons"> src="" alt="Email"> 
-            </span>
-            <span> 
-                <a href="" target="_blank"></a>
-                <img class="socialbuttons"> src="" alt="Youtube"> 
-            </span>
-        </footer>
+        
     </body>
 </html>
