Add wrapper for footer elements to group them.
Make the footer elements like social buttons and links into their
own group so we can manipulate them separately and the way we want
to.

--- a/index.html
+++ b/index.html
@@ -15,33 +15,35 @@
         </h1>
         
         <footer>
+         <buttons class="whole">   
+            <span class="buttons"> 
+                <a href="https://twitter.com/metro_ink?lang=en" >
+                <img class="socials" src="https://www.iconsdb.com/icons/preview/white/twitter-xxl.png"alt="Twitter"> 
+               </a>
+           </span>
+           <span class="buttons"> 
+               <a href="https://discord.gg/X5SWeJtX7h" target="_blank">
+               <img class="socials" src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png" alt="Discord"> 
+               </a>
+           </span>
+           <span class="buttons"> 
+               <a href="metroinkprod@gmail.com" target="_blank">
+               <img class="socials" src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Email"> 
+               </a>
+           </span>
+           <span class="buttons"> 
+               <a href="https://www.youtube.com/@MetroInkProductions/featured" target="_blank">
+               <img class="socials" src="https://static-00.iconduck.com/assets.00/youtube-icon-512x359-dyeyi1hm.png" alt="Youtube"> 
+               </a>
+            </buttons>    
+           </span>
+           <div class="links">
                 <span class="list"><a href="categories/staff.html">Staff</a></span>
                 <span class="list"><a href="categories/events.html">Events</a></span>
                 <span class="list"><a href="categories/FAQ.html">FAQ</a></span>
                 <span class="list"><a href="categories/merch.html">Merchandise</a></span>
                 <span class="list"><a href="categories/contact.html">Contact</a></span>
-                <footer2 class="buttons">
-                    <span> 
-                         <a href="https://twitter.com/metro_ink?lang=en" >
-                         <img class="socials" src="https://www.iconsdb.com/icons/preview/white/twitter-xxl.png"alt="Twitter"> 
-                        </a>
-                     </span>
-                     <span> 
-                         <a href="" target="_blank">
-                         <img class="socials" src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png" alt="Discord"> 
-                        </a>
-                     </span>
-                     <span> 
-                         <a href="" target="_blank">
-                         <img class="socials" src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Email"> 
-                        </a>
-                     </span>
-                     <span> 
-                         <a href="" target="_blank">
-                         <img class="socials" src="https://static-00.iconduck.com/assets.00/youtube-icon-512x359-dyeyi1hm.png" alt="Youtube"> 
-                        </a>
-                     </span>
-                 </footer2>
+            </div>  
         </footer>
         
     </body>
